{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 280,
  "lineage": "ada8c020-4979-801d-15f5-ca1b5fc693f4",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dc_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkInterfaces/dc_nic",
            "internal_domain_name_suffix": "fukkilcps4puhgip3u0krheyoh.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Server_nic_config",
                "primary": true,
                "private_ip_address": "10.10.0.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/publicIPAddresses/serverpublicip",
                "subnet_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/virtualNetworks/Test-VNET/subnets/Subnet-active_Server_subnet"
              }
            ],
            "location": "westus",
            "mac_address": "00-0D-3A-33-01-64",
            "name": "dc_nic",
            "private_ip_address": "10.10.0.5",
            "private_ip_addresses": [
              "10.10.0.5"
            ],
            "resource_group_name": "rg-test",
            "virtual_machine_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Compute/virtualMachines/DC"
          },
          "dependencies": [
            "azurerm_public_ip.serverippub",
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "design_vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkInterfaces/nic-0",
            "internal_domain_name_suffix": "fukkilcps4puhgip3u0krheyoh.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Design_nic_config",
                "primary": true,
                "private_ip_address": "10.10.3.25",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/publicIPAddresses/Desgin_ip-0",
                "subnet_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/virtualNetworks/Test-VNET/subnets/Design-subnet"
              }
            ],
            "location": "westus",
            "mac_address": "00-0D-3A-34-7E-B2",
            "name": "nic-0",
            "private_ip_address": "10.10.3.25",
            "private_ip_addresses": [
              "10.10.3.25"
            ],
            "resource_group_name": "rg-test",
            "virtual_machine_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Compute/virtualMachines/Design_VM-1"
          },
          "dependencies": [
            "azurerm_public_ip.design_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.department_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkInterfaces/nic-1",
            "internal_domain_name_suffix": "fukkilcps4puhgip3u0krheyoh.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Design_nic_config",
                "primary": true,
                "private_ip_address": "10.10.3.27",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/publicIPAddresses/Desgin_ip-1",
                "subnet_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/virtualNetworks/Test-VNET/subnets/Design-subnet"
              }
            ],
            "location": "westus",
            "mac_address": "00-0D-3A-33-10-10",
            "name": "nic-1",
            "private_ip_address": "10.10.3.27",
            "private_ip_addresses": [
              "10.10.3.27"
            ],
            "resource_group_name": "rg-test",
            "virtual_machine_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Compute/virtualMachines/Design_VM-2"
          },
          "dependencies": [
            "azurerm_public_ip.design_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.department_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "file_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkInterfaces/FileServer_nic",
            "internal_domain_name_suffix": "fukkilcps4puhgip3u0krheyoh.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "FileServer_nic_config",
                "primary": true,
                "private_ip_address": "10.10.0.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/publicIPAddresses/FileServerPublicIP",
                "subnet_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/virtualNetworks/Test-VNET/subnets/Subnet-active_Server_subnet"
              }
            ],
            "location": "westus",
            "mac_address": "60-45-BD-0A-05-07",
            "name": "FileServer_nic",
            "private_ip_address": "10.10.0.4",
            "private_ip_addresses": [
              "10.10.0.4"
            ],
            "resource_group_name": "rg-test",
            "virtual_machine_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Compute/virtualMachines/FileServer"
          },
          "dependencies": [
            "azurerm_public_ip.file_server_pub",
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_server_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkInterfaces/web_server_nic",
            "internal_domain_name_suffix": "fukkilcps4puhgip3u0krheyoh.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "webserver_nic_config",
                "primary": true,
                "private_ip_address": "10.10.0.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/publicIPAddresses/web_server-pip",
                "subnet_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/virtualNetworks/Test-VNET/subnets/Subnet-active_Server_subnet"
              }
            ],
            "location": "westus",
            "name": "web_server_nic",
            "private_ip_address": "10.10.0.10",
            "private_ip_addresses": [
              "10.10.0.10"
            ],
            "resource_group_name": "rg-test"
          },
          "dependencies": [
            "azurerm_public_ip.web_server_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "Design_VM_rule_assio",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkInterfaces/nic-0|/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkSecurityGroups/Sec_rule_1",
            "network_interface_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkInterfaces/nic-0",
            "network_security_group_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkSecurityGroups/Sec_rule_1"
          },
          "dependencies": [
            "azurerm_network_interface.design_vm_nic",
            "azurerm_network_security_group.design_nsg",
            "azurerm_public_ip.design_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.department_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkInterfaces/nic-1|/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkSecurityGroups/Sec_rule_1",
            "network_interface_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkInterfaces/nic-1",
            "network_security_group_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkSecurityGroups/Sec_rule_1"
          },
          "dependencies": [
            "azurerm_network_interface.design_vm_nic",
            "azurerm_network_security_group.design_nsg",
            "azurerm_public_ip.design_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.department_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "FileServer_Sec_Assio",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkInterfaces/FileServer_nic|/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkSecurityGroups/server-nsg",
            "network_interface_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkInterfaces/FileServer_nic",
            "network_security_group_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkSecurityGroups/server-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.file_nic",
            "azurerm_network_security_group.servernsg",
            "azurerm_public_ip.file_server_pub",
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "MainServer_Sec_Assio",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkInterfaces/dc_nic|/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkSecurityGroups/server-nsg",
            "network_interface_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkInterfaces/dc_nic",
            "network_security_group_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkSecurityGroups/server-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.dc_nic",
            "azurerm_network_security_group.servernsg",
            "azurerm_public_ip.serverippub",
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "Web_server_Sec_Assio",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkInterfaces/web_server_nic|/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkSecurityGroups/server-nsg",
            "network_interface_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkInterfaces/web_server_nic",
            "network_security_group_id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkSecurityGroups/server-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.web_server_nic",
            "azurerm_network_security_group.servernsg",
            "azurerm_public_ip.web_server_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "design_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkSecurityGroups/Sec_rule_1",
            "location": "westus",
            "name": "Sec_rule_1",
            "resource_group_name": "rg-test",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "FileServer_to_VM",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "445",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "allow_https",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "445",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "VM_to_FileServer",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "servernsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/networkSecurityGroups/server-nsg",
            "location": "westus",
            "name": "server-nsg",
            "resource_group_name": "rg-test",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "securityrule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "securityrule2",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "design_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/publicIPAddresses/Desgin_ip-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.83.48.54",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "Desgin_ip-0",
            "resource_group_name": "rg-test",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/publicIPAddresses/Desgin_ip-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.83.49.223",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "Desgin_ip-1",
            "resource_group_name": "rg-test",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "file_server_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/publicIPAddresses/FileServerPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.66.10.76",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "FileServerPublicIP",
            "resource_group_name": "rg-test",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "serverippub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/publicIPAddresses/serverpublicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.83.48.58",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "serverpublicip",
            "resource_group_name": "rg-test",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_server_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/publicIPAddresses/web_server-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.245.240.144",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "web_server-pip",
            "resource_group_name": "rg-test",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "department_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "Design",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/virtualNetworks/Test-VNET/subnets/Design-subnet",
            "name": "Design-subnet",
            "resource_group_name": "rg-test",
            "virtual_network_name": "Test-VNET"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "HR",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/virtualNetworks/Test-VNET/subnets/HR-subnet",
            "name": "HR-subnet",
            "resource_group_name": "rg-test",
            "virtual_network_name": "Test-VNET"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "IT",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/virtualNetworks/Test-VNET/subnets/IT-subnet",
            "name": "IT-subnet",
            "resource_group_name": "rg-test",
            "virtual_network_name": "Test-VNET"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/virtualNetworks/Test-VNET/subnets/Subnet-active_Server_subnet",
            "name": "Subnet-active_Server_subnet",
            "resource_group_name": "rg-test",
            "virtual_network_name": "Test-VNET"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "dns_servers": [
              "10.10.0.5"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2ca4142d-974f-439f-990f-ed34a89c9877",
            "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/virtualNetworks/Test-VNET",
            "location": "westus",
            "name": "Test-VNET",
            "resource_group_name": "rg-test",
            "subnet": [
              {
                "address_prefix": "10.10.0.0/24",
                "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/virtualNetworks/Test-VNET/subnets/Subnet-active_Server_subnet",
                "name": "Subnet-active_Server_subnet"
              },
              {
                "address_prefix": "10.10.1.0/24",
                "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/virtualNetworks/Test-VNET/subnets/IT-subnet",
                "name": "IT-subnet"
              },
              {
                "address_prefix": "10.10.2.0/24",
                "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/virtualNetworks/Test-VNET/subnets/HR-subnet",
                "name": "HR-subnet"
              },
              {
                "address_prefix": "10.10.3.0/24",
                "id": "/subscriptions/c563003f-fc00-4923-94ed-785a502745d6/resourceGroups/rg-test/providers/Microsoft.Network/virtualNetworks/Test-VNET/subnets/Design-subnet",
                "name": "Design-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}